// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Hero does not render optional elements when not provided 1`] = `
<div>
  <section
    id="heroOne"
  >
    <div
      class="mx-auto max-w-7xl px-4 sm:px-6"
    >
      <div
        class="py-12 md:py-20"
      >
        <div
          class="mx-auto max-w-4xl pb-10 text-center md:pb-16"
        >
          <h1
            class="leading-tighter font-heading mb-6 text-4xl font-bold tracking-tighter md:text-5xl lg:text-6xl"
          >
            Only Title
          </h1>
          <div
            class="mx-auto max-w-3xl"
          >
            <div
              class="flex max-w-none flex-col flex-nowrap gap-4 px-4 sm:flex-row sm:justify-center"
            />
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Hero matches snapshot 1`] = `
<div>
  <section
    id="heroOne"
  >
    <div
      class="mx-auto max-w-7xl px-4 sm:px-6"
    >
      <div
        class="py-12 md:py-20"
      >
        <div
          class="mx-auto max-w-4xl pb-10 text-center md:pb-16"
        >
          <p
            class="text-base font-semibold uppercase tracking-wide text-primary-600 dark:text-primary-200"
          >
            Your Success
          </p>
          <h1
            class="leading-tighter font-heading mb-6 text-4xl font-bold tracking-tighter md:text-5xl lg:text-6xl"
          >
            Welcome to Our Site
          </h1>
          <div
            class="mx-auto max-w-3xl"
          >
            <p
              class="mb-6 text-xl font-normal text-gray-600 dark:text-slate-400"
            >
              We provide awesome solutions
            </p>
            <div
              class="flex max-w-none flex-col flex-nowrap gap-4 px-4 sm:flex-row sm:justify-center"
            >
              <div
                class="flex w-auto cursor-pointer"
              >
                <a
                  class="inline-flex items-center justify-center w-full sm:mb-0 btn btn-primary"
                  href="/get-started"
                >
                  Get Started
                </a>
              </div>
              <div
                class="flex w-auto cursor-pointer"
              >
                <a
                  class="inline-flex items-center justify-center w-full sm:mb-0 btn"
                  href="/learn-more"
                >
                  Learn More
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          class="relative m-auto max-w-5xl"
        >
          <img
            alt="Hero Image"
            class="mx-auto h-auto w-full rounded-md bg-gray-400 dark:bg-slate-700"
            height="607"
            loading="eager"
            placeholder="blur"
            sizes="(max-width: 64rem) 100vw, 1024px"
            src="/hero.png"
            style="height: auto;"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;
